OrbitPy, TAT-C coverage example complete

--- a/src/orbitpy-tatc-coverage-example.ipynb
+++ b/src/orbitpy-tatc-coverage-example.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
     "                        mass= 100.5,\n",
     "                        volume= 0.75,\n",
     "                        power= 150.0,\n",
-    "                        field_of_view = CircularGeometry(diameter=60.0),\n",
+    "                        field_of_view = CircularGeometry(diameter=100.0),\n",
     "                        data_rate= 10.5,\n",
     "                        bits_per_pixel= 16\n",
     "                    )\n",
@@ -116,8 +116,8 @@
     "    ).as_targets()\n",
     "\n",
     "mission_start = datetime(2024, 1, 1, tzinfo=timezone.utc)\n",
-    "mission_duration = timedelta(hours=2)\n",
-    "propagate_time_step = timedelta(minutes=0.5)"
+    "mission_duration = timedelta(days=7)\n",
+    "propagate_time_step = timedelta(minutes=0.1)"
    ]
   },
   {
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,13 +254,7 @@
     "    return AccessResponse(\n",
     "            **request.model_dump(exclude=\"target_records\"),\n",
     "            target_records=access_record\n",
-    "        )\n",
-    "\n",
-    "                    \n",
-    "    \n",
-    "\n",
-    "\n",
-    "\n"
+    "        )"
    ]
   },
   {
@@ -274,7 +268,7 @@
     "    targets=targets,\n",
     "    start=mission_start,\n",
     "    duration=mission_duration,\n",
-    "    propagator=Propagator.J2,\n",
+    "    propagator=Propagator.SGP4,\n",
     "    payload_ids=[\"Atom\"]\n",
     ")\n",
     "\n",
@@ -286,7 +280,7 @@
     "\n",
     "access_data = access_response.as_dataframe()\n",
     "\n",
-    "display(access_data)"
+    "#display(access_data)"
    ]
   },
   {
@@ -294,6 +288,142 @@
    "metadata": {},
    "source": [
     "### Run coverage analysis with TAT-C on the Access response from OrbitPy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import geopandas as gpd\n",
+    "\n",
+    "from eose.coverage import (\n",
+    "    CoverageSample,\n",
+    "    CoverageRecord,\n",
+    "    CoverageRequest,\n",
+    "    CoverageResponse,\n",
+    ")\n",
+    "\n",
+    "def coverage_tatc(request: CoverageRequest) -> CoverageResponse:\n",
+    "    aggregated_obs = aggregate_observations(\n",
+    "        gpd.GeoDataFrame(\n",
+    "            [\n",
+    "                {\n",
+    "                    \"point_id\": request.targets.index(target),\n",
+    "                    \"geometry\": target.as_geometry(),\n",
+    "                    \"satellite\": sample.satellite_id,\n",
+    "                    \"instrument\": sample.instrument_id,\n",
+    "                    \"start\": sample.start,\n",
+    "                    \"end\": sample.start + sample.duration,\n",
+    "                    \"epoch\": sample.start + sample.duration / 2,\n",
+    "                }\n",
+    "                for record in request.target_records\n",
+    "                for target in [t for t in request.targets if t.id == record.target_id]\n",
+    "                for sample in record.samples\n",
+    "                if sample.satellite_id not in request.omit_satellite_ids\n",
+    "                if sample.instrument_id not in request.omit_payload_ids\n",
+    "            ]\n",
+    "        )\n",
+    "    )\n",
+    "    reduced_obs = reduce_observations(aggregated_obs)\n",
+    "    return CoverageResponse(\n",
+    "        **request.model_dump(\n",
+    "            exclude=[\"target_records\", \"harmonic_mean_revisit\", \"coverage_fraction\"]\n",
+    "        ),\n",
+    "        target_records=list(\n",
+    "            reduced_obs.apply(\n",
+    "                lambda r: CoverageRecord(\n",
+    "                    **next(\n",
+    "                        record\n",
+    "                        for record in request.target_records\n",
+    "                        if request.targets[r[\"point_id\"]].id == record.target_id\n",
+    "                    ).model_dump(exclude=[\"samples\", \"mean_revisit\", \"number_samples\"]),\n",
+    "                    samples=aggregated_obs[\n",
+    "                        aggregated_obs.point_id == r[\"point_id\"]\n",
+    "                    ].apply(\n",
+    "                        lambda s: CoverageSample(\n",
+    "                            start=s.start,\n",
+    "                            duration=s.end - s.start,\n",
+    "                            satellite_id=s.satellite,\n",
+    "                            instrument_id=s.instrument,\n",
+    "                            revisit=None if pd.isna(s.revisit) else s.revisit,\n",
+    "                        ),\n",
+    "                        axis=1,\n",
+    "                    ),\n",
+    "                    mean_revisit=(\n",
+    "                        None\n",
+    "                        if pd.isna(r[\"revisit\"])\n",
+    "                        else timedelta(seconds=r[\"revisit\"].total_seconds())\n",
+    "                    ),\n",
+    "                    number_samples=r[\"samples\"],\n",
+    "                ),\n",
+    "                axis=1,\n",
+    "            )\n",
+    "        )\n",
+    "        + [\n",
+    "            CoverageRecord(target_id=target.id)\n",
+    "            for i, target in enumerate(request.targets)\n",
+    "            if not any(reduced_obs[\"point_id\"] == i)\n",
+    "        ],\n",
+    "        harmonic_mean_revisit=(\n",
+    "            None\n",
+    "            if reduced_obs.dropna(subset=\"revisit\").empty\n",
+    "            else timedelta(\n",
+    "                seconds=hmean(\n",
+    "                    reduced_obs.dropna(subset=\"revisit\")[\"revisit\"].dt.total_seconds()\n",
+    "                )\n",
+    "            )\n",
+    "        ),\n",
+    "        coverage_fraction=len(reduced_obs.index) / len(request.targets),\n",
+    "    )\n",
+    "    \n",
+    "request2 = CoverageRequest(**access_response.model_dump())\n",
+    "\n",
+    "display(request2.model_dump_json())\n",
+    "\n",
+    "response2 = coverage_tatc(request2)\n",
+    "\n",
+    "display(response2.model_dump_json())\n",
+    "\n",
+    "data2 = response2.as_dataframe()\n",
+    "\n",
+    "display(data2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# load shapefile\n",
+    "world = gpd.read_file(\n",
+    "    \"https://naciscdn.org/naturalearth/110m/physical/ne_110m_land.zip\"\n",
+    ")\n",
+    "\n",
+    "# example composite plot using GeoDataFrames\n",
+    "fig, ax = plt.subplots()\n",
+    "ax.set_title(f\"Number Samples (Coverage={response2.coverage_fraction:.1%})\")\n",
+    "data2.plot(ax=ax, column=\"number_samples\", legend=True)\n",
+    "world.boundary.plot(ax=ax, lw=0.5, color=\"k\")\n",
+    "ax.set_aspect(\"equal\")\n",
+    "plt.show()\n",
+    "\n",
+    "# example composite plot using GeoDataFrames\n",
+    "fig, ax = plt.subplots()\n",
+    "ax.set_title(\n",
+    "    f\"Mean Revisit (Harmonic Mean={response2.harmonic_mean_revisit/timedelta(hours=1):.1f} hr)\"\n",
+    ")\n",
+    "data2[\"mean_revisit_hr\"] = data2.apply(\n",
+    "    lambda r: r[\"mean_revisit\"] / timedelta(hours=1), axis=1\n",
+    ")\n",
+    "data2.plot(ax=ax, column=\"mean_revisit_hr\", legend=True)\n",
+    "world.boundary.plot(ax=ax, lw=0.5, color=\"k\")\n",
+    "ax.set_aspect(\"equal\")\n",
+    "plt.show()"
    ]
   }
  ],
