updated to accept general instrument FOV and orientation

--- a/src/orbitpy-tatc-coverage-example.ipynb
+++ b/src/orbitpy-tatc-coverage-example.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,6 +33,9 @@
     "from datetime import datetime, timedelta, timezone\n",
     "from shapely.geometry import box, mapping\n",
     "from scipy.stats import hmean\n",
+    "\n",
+    "from scipy.spatial.transform import Rotation as Scipy_Rotation\n",
+    "\n",
     "import pandas as pd\n",
     "\n",
     "from astropy.time import Time as AstroPy_Time\n",
@@ -54,7 +57,7 @@
     "\n",
     "from eose.orbits import GeneralPerturbationsOrbitState, Propagator\n",
     "from eose.satellites import Satellite\n",
-    "from eose.utils import CartesianReferenceFrame, PlanetaryCoordinateReferenceSystem\n",
+    "from eose.utils import CartesianReferenceFrame, PlanetaryCoordinateReferenceSystem, Quaternion\n",
     "from eose.targets import TargetPoint\n",
     "from eose.geometry import Position\n",
     "\n",
@@ -69,7 +72,7 @@
     "from instrupy import Instrument as InstruPy_Instrument\n",
     "from instrupy.basic_sensor_model import BasicSensorModel as InstruPy_BasicSensorModel\n",
     "\n",
-    "from eose.instruments import CircularGeometry, BasicSensor\n",
+    "from eose.instruments import CircularGeometry, RectangularGeometry, BasicSensor\n",
     "from eose.datametrics import DataMetricsRequest, BasicSensorDataMetricsInstantaneous, DataMetricsSample, DataMetricsRecord, DataMetricsResponse\n",
     "\n",
     "pd.set_option('display.max_rows', None)"
@@ -84,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +99,8 @@
     "                        mass= 100.5,\n",
     "                        volume= 0.75,\n",
     "                        power= 150.0,\n",
-    "                        field_of_view = CircularGeometry(diameter=100.0),\n",
+    "                        field_of_view = RectangularGeometry(angle_height=60.0, angle_width=30), #CircularGeometry(diameter=60.0)\n",
+    "                        orientation= list([0, 0.258819, 0, 0.9659258]), # +30 deg roll about x-axis (roll)\n",
     "                        data_rate= 10.5,\n",
     "                        bits_per_pixel= 16\n",
     "                    )\n",
@@ -131,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,10 +150,22 @@
     "            if instru.id in request.payload_ids:\n",
     "                instru_type = instru.type\n",
     "                if instru_type == \"BasicSensor\":\n",
-    "                    # TODO: Update to accept general instrument FOV geometries and orientation\n",
+    "\n",
+    "                    if instru.field_of_view.type == \"CircularGeometry\":\n",
+    "                        instupy_fov_geom = {\"shape\": \"CIRCULAR\", \"diameter\": instru.field_of_view.diameter}\n",
+    "                    elif instru.field_of_view.type == \"RectangularGeometry\":\n",
+    "                        instupy_fov_geom = {\"shape\": \"RECTANGULAR\", \"angleHeight\": instru.field_of_view.angle_height, \"angleWidth\": instru.field_of_view.angle_width}\n",
+    "                    else:\n",
+    "                        raise ValueError(f\"Only Circular and Rectangular geometries are supported and not {instru.field_of_view.type}\")\n",
+    "\n",
+    "                    # Convert orientation in Quaternion to Euler rotations\n",
+    "                    r = Scipy_Rotation.from_quat(list(instru.orientation))\n",
+    "                    (x,y,z) = r.as_euler('XYZ', degrees=True) # Conventions 'XYZ' are for intrinsic rotations (used by OrbitPy), while 'xyz' are for extrinsic rotations.\n",
+    "                    \n",
     "                    instrupy_sensor = InstruPy_Instrument.from_dict({ \"@type\": \"Basic Sensor\",\n",
     "                        \"orientation\": {\"referenceFrame\": \"SC_BODY_FIXED\", \"convention\": \"REF_FRAME_ALIGNED\"},\n",
-    "                        \"fieldOfViewGeometry\": {\"shape\": \"CIRCULAR\", \"diameter\": instru.field_of_view.diameter},\n",
+    "                        \"fieldOfViewGeometry\": instupy_fov_geom,\n",
+    "                        \"orientation\": {\"referenceFrame\": \"NADIR_POINTING\", \"convention\": \"XYZ\",\"xRotation\":x,\"yRotation\":y,\"zRotation\":z},\n",
     "                        \"@id\": instru.id\n",
     "                    })\n",
     "                else:\n",
@@ -170,7 +186,7 @@
     "                                    spacecraftBus = orbitpy_sat_bus, \n",
     "                                    instrument = [instrupy_sensor]\n",
     "                                )\n",
-    "                warnings.warn(\"OrbitPy ignores spacecraft bus orientation, and assumes it to be aligned to the geocentric Nadir pointing frame.\", UserWarning)                \n",
+    "                warnings.warn(\"OrbitPy ignores spacecraft-bus orientation and assumes alignment with the NADIR_GEOCENTRIC frame. To account for this, please specify the instrument orientation relative to the NADIR_GEOCENTRIC frame.\", UserWarning)                \n",
     "                OrbitPy_Satellites.append(sat)\n",
     "    \n",
     "    #### Format the Target points into OrbitPy Grid object ####\n",
