--- a/src/tatc-instrupy-instrument-example.ipynb
+++ b/src/tatc-instrupy-instrument-example.ipynb
@@ -93,6 +93,8 @@
     "\n",
     "from astropy.time import Time as AstroPy_Time\n",
     "\n",
+    "from scipy.spatial.transform import Rotation as Scipy_Rotation\n",
+    "\n",
     "from pydantic import AwareDatetime\n",
     "\n",
     "from tatc.schemas import Instrument as TATC_Instrument, Satellite as TATC_Satellite, TwoLineElements, Point\n",
@@ -351,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -431,10 +433,22 @@
     "                    if instru.id == instrument_id:\n",
     "                        instru_type = instru.type\n",
     "                        if instru_type == \"BasicSensor\":\n",
-    "                            # TODO: Update to accept general instrument FOV geometries and orientation\n",
-    "                            instrupy_sensor = InstruPy_BasicSensorModel.from_dict({\n",
+    "                            if instru.field_of_view.type == \"CircularGeometry\":\n",
+    "                                instrupy_fov_geom = {\"shape\": \"CIRCULAR\", \"diameter\": instru.field_of_view.diameter}\n",
+    "                            elif instru.field_of_view.type == \"RectangularGeometry\":\n",
+    "                                instrupy_fov_geom = {\"shape\": \"RECTANGULAR\", \"angleHeight\": instru.field_of_view.angle_height, \"angleWidth\": instru.field_of_view.angle_width}\n",
+    "                            else:\n",
+    "                                raise ValueError(f\"Only Circular and Rectangular geometries are supported and not {instru.field_of_view.type}\")\n",
+    "\n",
+    "                            # Convert orientation in Quaternion to Euler rotations\n",
+    "                            r = Scipy_Rotation.from_quat(list(instru.orientation))\n",
+    "                            (x,y,z) = r.as_euler('XYZ', degrees=True) # Conventions 'XYZ' are for intrinsic rotations (used by OrbitPy), while 'xyz' are for extrinsic rotations.\n",
+    "                            \n",
+    "                            instrupy_sensor = InstruPy_BasicSensorModel.from_dict({ \"@type\": \"Basic Sensor\",\n",
     "                                \"orientation\": {\"referenceFrame\": \"SC_BODY_FIXED\", \"convention\": \"REF_FRAME_ALIGNED\"},\n",
-    "                                \"fieldOfViewGeometry\": {\"shape\": \"CIRCULAR\", \"diameter\": instru.field_of_view.diameter}\n",
+    "                                \"fieldOfViewGeometry\": instrupy_fov_geom,\n",
+    "                                \"orientation\": {\"referenceFrame\": \"NADIR_POINTING\", \"convention\": \"XYZ\",\"xRotation\":x,\"yRotation\":y,\"zRotation\":z},\n",
+    "                                \"@id\": instru.id\n",
     "                            })\n",
     "                            return instru_type, instrupy_sensor\n",
     "                        else:\n",
