added satellite bus

--- a/src/orbitpy-tatc-coverage-example.ipynb
+++ b/src/orbitpy-tatc-coverage-example.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "# OrbitPy TAT-C Example for discrete time coverage calculations\n",
     "\n",
-    "OrbitPy is used to access calculations, followed by TAT-C to coduct coverage analysis."
+    "OrbitPy is used for access calculations, followed by TAT-C to conduct coverage analysis. \n",
+    "\n",
+    "In this example the access request results in OrbitPy performing propagation calculations, followed by evaluation of access to target points at the propagated time steps."
    ]
   },
   {
@@ -15,18 +17,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from joblib import Parallel, delayed\n",
-    "\n",
     "import warnings\n",
     "\n",
     "import tempfile\n",
     "import os, shutil\n",
     "import csv\n",
-    "\n",
-    "script_directory = os.path.dirname(os.path.abspath(\"__file__\"))\n",
-    "temp_dir = os.path.join(script_directory, \"temp\")\n",
-    "os.makedirs(temp_dir, exist_ok=True)\n",
-    "#os.environ['TMPDIR'] = temp_dir\n",
     "\n",
     "\n",
     "import json\n",
@@ -38,14 +33,9 @@
     "\n",
     "import pandas as pd\n",
     "\n",
-    "from astropy.time import Time as AstroPy_Time\n",
-    "\n",
     "from pydantic import AwareDatetime\n",
     "\n",
-    "from tatc.schemas import Instrument as TATC_Instrument, Satellite as TATC_Satellite, TwoLineElements, Point\n",
-    "from tatc.analysis import collect_orbit_track, OrbitCoordinate, OrbitOutput\n",
     "from tatc.analysis import (\n",
-    "    collect_multi_observations,\n",
     "    aggregate_observations,\n",
     "    reduce_observations,\n",
     ")\n",
@@ -56,9 +46,8 @@
     "from orbitpy.grid import Grid as OrbitPy_Grid\n",
     "\n",
     "from eose.orbits import GeneralPerturbationsOrbitState, Propagator\n",
-    "from eose.satellites import Satellite\n",
-    "from eose.utils import CartesianReferenceFrame, PlanetaryCoordinateReferenceSystem, Quaternion\n",
-    "from eose.targets import TargetPoint\n",
+    "from eose.satellites import Satellite, SatelliteBus\n",
+    "from eose.utils import CartesianReferenceFrame, PlanetaryCoordinateReferenceSystem, Quaternion, FixedOrientation\n",
     "from eose.geometry import Position\n",
     "\n",
     "from eose.access import (\n",
@@ -70,10 +59,8 @@
     "from eose.grids import UniformAngularGrid\n",
     "\n",
     "from instrupy import Instrument as InstruPy_Instrument\n",
-    "from instrupy.basic_sensor_model import BasicSensorModel as InstruPy_BasicSensorModel\n",
     "\n",
     "from eose.instruments import CircularGeometry, RectangularGeometry, BasicSensor\n",
-    "from eose.datametrics import DataMetricsRequest, BasicSensorDataMetricsInstantaneous, DataMetricsSample, DataMetricsRecord, DataMetricsResponse\n",
     "\n",
     "pd.set_option('display.max_rows', None)"
    ]
@@ -111,7 +98,8 @@
     "            orbit=GeneralPerturbationsOrbitState.from_omm(iss_omm),\n",
     "            payloads=[\n",
     "                basic_sensor\n",
-    "            ]\n",
+    "            ],\n",
+    "            satellite_bus=SatelliteBus(id=\"BlueCanyon XB16\", orientation=FixedOrientation.NADIR_GEOCENTRIC)\n",
     "        )\n",
     "    ]\n",
     "\n",
@@ -141,6 +129,10 @@
    "source": [
     "def access_orbitpy(request: AccessRequest) -> AccessResponse:\n",
     "\n",
+    "    # create a temporary directory to hold temporary files\n",
+    "    script_directory = os.path.dirname(os.path.abspath(\"__file__\"))\n",
+    "    temp_dir = os.path.join(script_directory, \"temp\")\n",
+    "    os.makedirs(temp_dir, exist_ok=True)\n",
     "    \n",
     "    #### Enumerate and convert from EOSE-API satellites to OrbitPy satellite objects. ####\n",
     "    # (Enumeration generates distinct orbit-instrument pairs for satellites equipped with multiple instruments.)\n",
@@ -179,14 +171,17 @@
     "                                                            \"tle_line2\": tle[1]\n",
     "                                                            }})\n",
     "                \n",
-    "                # spacecraft bus attributes are presently ignored and set to default. TODO: Consider the spacecraft bus orientation.\n",
-    "                orbitpy_sat_bus = OrbitPy_SpacecraftBus.from_dict({\"orientation\":{\"referenceFrame\":\"Nadir_pointing\", \"convention\": \"REF_FRAME_ALIGNED\"}}) \n",
+    "                if hasattr(satellite, \"satellite_bus\") is False or satellite.satellite_bus.orientation==FixedOrientation.NADIR_GEOCENTRIC:\n",
+    "                    orbitpy_sat_bus = OrbitPy_SpacecraftBus.from_dict({\"orientation\":{\"referenceFrame\":\"Nadir_pointing\", \"convention\": \"REF_FRAME_ALIGNED\"}})\n",
+    "                else:\n",
+    "                    warnings.warn(\"OrbitPy only processes spacecraft-bus orientation aligned with the NADIR_GEOCENTRIC frame. To account for off-naidr instrument viewing, please specify the instrument orientation relative to the NADIR_GEOCENTRIC frame.\", UserWarning)                \n",
+    "\n",
     "                sat = OrbitPy_Spacecraft(_id = satellite.id,\n",
     "                                    orbitState = orbit_state,\n",
     "                                    spacecraftBus = orbitpy_sat_bus, \n",
     "                                    instrument = [instrupy_sensor]\n",
     "                                )\n",
-    "                warnings.warn(\"OrbitPy ignores spacecraft-bus orientation and assumes alignment with the NADIR_GEOCENTRIC frame. To account for this, please specify the instrument orientation relative to the NADIR_GEOCENTRIC frame.\", UserWarning)                \n",
+    "                \n",
     "                OrbitPy_Satellites.append(sat)\n",
     "    \n",
     "    #### Format the Target points into OrbitPy Grid object ####\n",
@@ -244,7 +239,7 @@
     "                \n",
     "                \n",
     "                grouped_intervals = intervals_df.groupby('GP index')\n",
-    "                access_record = [] # record of accesses at each target point\n",
+    "                access_records = [] # record of accesses at each target point\n",
     "                for gp_index, group in grouped_intervals:\n",
     "                    # Iterate over each record in the group\n",
     "                    access_sample = []\n",
@@ -259,7 +254,7 @@
     "                            duration=access_duration\n",
     "                        ))\n",
     "                    # Add access record\n",
-    "                    access_record.append(AccessRecord(\n",
+    "                    access_records.append(AccessRecord(\n",
     "                        target_id=row_to_target_id[gp_index],\n",
     "                        samples=access_sample\n",
     "                    ))\n",
@@ -269,13 +264,13 @@
     "    \n",
     "    return AccessResponse(\n",
     "            **request.model_dump(exclude=\"target_records\"),\n",
-    "            target_records=access_record\n",
+    "            target_records=access_records\n",
     "        )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,6 +280,7 @@
     "    start=mission_start,\n",
     "    duration=mission_duration,\n",
     "    propagator=Propagator.SGP4,\n",
+    "    time_step=propagate_time_step,\n",
     "    payload_ids=[\"Atom\"]\n",
     ")\n",
     "\n",
