orbitpy propagation and access examples updated to use start time in JDUT1

--- a/src/orbitpy-propagation-example.ipynb
+++ b/src/orbitpy-propagation-example.ipynb
@@ -20,19 +20,12 @@
     "import tempfile\n",
     "import os, shutil\n",
     "\n",
-    "script_directory = os.path.dirname(os.path.abspath(\"__file__\"))\n",
-    "temp_dir = os.path.join(script_directory, \"temp\")\n",
-    "os.makedirs(temp_dir, exist_ok=True)\n",
-    "\n",
     "\n",
     "import json\n",
     "from datetime import datetime, timedelta, timezone\n",
-    "\n",
+    "from astropy.time import Time as AstroPy_Time\n",
     "\n",
     "import pandas as pd\n",
-    "\n",
-    "\n",
-    "from pydantic import AwareDatetime\n",
     "\n",
     "from orbitpy.util import OrbitState as OrbitPy_OrbitState, Spacecraft as OrbitPy_Spacecraft\n",
     "from orbitpy.propagator import J2AnalyticalPropagator as OrbitPy_J2AnalyticalPropagator, SGP4Propagator as OrbitPy_SGP4Propagator\n",
@@ -49,9 +42,7 @@
     "    PropagationResponse,\n",
     ")\n",
     "\n",
-    "from eose.instruments import CircularGeometry, RectangularGeometry, BasicSensor\n",
-    "\n",
-    "pd.set_option('display.max_rows', None)"
+    "#pd.set_option('display.max_rows', None)"
    ]
   },
   {
@@ -71,23 +62,10 @@
     "iss_omm_str = '[{\"OBJECT_NAME\":\"ISS (ZARYA)\",\"OBJECT_ID\":\"1998-067A\",\"EPOCH\":\"2024-06-07T09:53:34.728000\",\"MEAN_MOTION\":15.50975122,\"ECCENTRICITY\":0.0005669,\"INCLINATION\":51.6419,\"RA_OF_ASC_NODE\":3.7199,\"ARG_OF_PERICENTER\":284.672,\"MEAN_ANOMALY\":139.0837,\"EPHEMERIS_TYPE\":0,\"CLASSIFICATION_TYPE\":\"U\",\"NORAD_CAT_ID\":25544,\"ELEMENT_SET_NO\":999,\"REV_AT_EPOCH\":45703,\"BSTAR\":0.00033759,\"MEAN_MOTION_DOT\":0.00019541,\"MEAN_MOTION_DDOT\":0}]'\n",
     "iss_omm = json.loads(iss_omm_str)[0]\n",
     "\n",
-    "basic_sensor = BasicSensor(   id=\"Atom\",\n",
-    "                        mass= 100.5,\n",
-    "                        volume= 0.75,\n",
-    "                        power= 150.0,\n",
-    "                        field_of_view = RectangularGeometry(angle_height=60.0, angle_width=30), #CircularGeometry(diameter=60.0)\n",
-    "                        orientation= list([0, 0.258819, 0, 0.9659258]), # +30 deg roll about x-axis (roll)\n",
-    "                        data_rate= 10.5,\n",
-    "                        bits_per_pixel= 16\n",
-    "                    )\n",
-    "\n",
     "satellites=[\n",
     "        Satellite(\n",
     "            id=\"ISS\",\n",
-    "            orbit=GeneralPerturbationsOrbitState.from_omm(iss_omm),\n",
-    "            payloads=[\n",
-    "                basic_sensor\n",
-    "            ]\n",
+    "            orbit=GeneralPerturbationsOrbitState.from_omm(iss_omm)\n",
     "        )\n",
     "    ]\n",
     "\n",
@@ -113,16 +91,19 @@
    "source": [
     "def propagate_orbitpy(request: PropagationRequest) -> PropagationResponse:\n",
     "\n",
+    "    # create a temporary directory to hold temporary files\n",
+    "    script_directory = os.path.dirname(os.path.abspath(\"__file__\"))\n",
+    "    temp_dir = os.path.join(script_directory, \"temp\")\n",
+    "    os.makedirs(temp_dir, exist_ok=True)\n",
+    "\n",
     "    if request.frame != CartesianReferenceFrame.ICRF:\n",
     "        raise ValueError(f\"OrbitPy supports only CartesianReferenceFrame.ICRF and does not support {request.frame}\")\n",
     "    \n",
     "    #### Enumerate and convert from EOSE-API satellites to OrbitPy satellite objects. ####\n",
-    "    # (Enumeration generates distinct orbit-instrument pairs for satellites equipped with multiple instruments.)\n",
     "    OrbitPy_Satellites = []\n",
     "    for satellite in request.satellites:\n",
     "                \n",
     "        tle = satellite.orbit.to_tle()\n",
-    "\n",
     "        orbit_state = OrbitPy_OrbitState.from_dict({\"tle\": {\n",
     "                                                    \"tle_line0\": \"Unknown\",\n",
     "                                                    \"tle_line1\": tle[0],\n",
@@ -130,8 +111,8 @@
     "                                                    }})\n",
     "        \n",
     "        sat = OrbitPy_Spacecraft(_id = satellite.id,\n",
-    "                            orbitState = orbit_state  #satellite-bus and instrument attributes are ignored since they are not relevant to propagation\n",
-    "                        )\n",
+    "                                 orbitState = orbit_state  #satellite-bus and instrument attributes are ignored since they are not relevant to propagation\n",
+    "                                )\n",
     "        OrbitPy_Satellites.append(sat)\n",
     "    \n",
     "    #### run propagation and coverage with OrbitPy ####\n",
@@ -143,8 +124,13 @@
     "    else:\n",
     "        raise RuntimeError(\"OrbitPy only supports J2 and SGP4 propagators.\")\n",
     "            \n",
-    "    start_date_dict = {\"@type\": \"GREGORIAN_UT1\", \"year\": request.start.year, \"month\": request.start.month, \"day\": request.start.day, \"hour\": request.start.hour, \"minute\": request.start.minute, \"second\": request.start.second + request.start.microsecond / 1000000.0}\n",
-    "    start_date = OrbitPy_OrbitState.date_from_dict(start_date_dict) # assumed that the time scale is UT1\n",
+    "    #### Convert request time to Julian Date UT1####\n",
+    "    utc_dt = request.start.astimezone(timezone.utc) # Convert to UTC (if not already in UTC)\n",
+    "    astropy_utc_time = AstroPy_Time(utc_dt, scale='utc') # Convert to astropy Time object  \n",
+    "    astropy_ut1_time = astropy_utc_time.ut1 # Convert to UT1 scale\n",
+    "\n",
+    "    start_date_dict = {\"@type\": \"JULIAN_DATE_UT1\", \"jd\": astropy_ut1_time.jd}\n",
+    "    start_date = OrbitPy_OrbitState.date_from_dict(start_date_dict) # assumed that the time scale is UT1.\n",
     "    duration = request.duration.total_seconds() / 86400.0\n",
     "    \n",
     "    satellite_records = []\n",
@@ -192,7 +178,8 @@
     "    start=mission_start,\n",
     "    duration=mission_duration,\n",
     "    frame=CartesianReferenceFrame.ICRF,\n",
-    "    propagator=Propagator.J2\n",
+    "    propagator=Propagator.J2,\n",
+    "    time_step=propagate_time_step\n",
     ")\n",
     "\n",
     "#display(request.model_dump_json())\n",
