--- a/src/orbitpy-tatc-coverage-example.ipynb
+++ b/src/orbitpy-tatc-coverage-example.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,6 +26,7 @@
     "\n",
     "import json\n",
     "from datetime import datetime, timedelta, timezone\n",
+    "from astropy.time import Time as AstroPy_Time\n",
     "from shapely.geometry import box, mapping\n",
     "from scipy.stats import hmean\n",
     "\n",
@@ -62,7 +63,7 @@
     "\n",
     "from eose.instruments import CircularGeometry, RectangularGeometry, BasicSensor\n",
     "\n",
-    "pd.set_option('display.max_rows', None)"
+    "#pd.set_option('display.max_rows', None)"
    ]
   },
   {
@@ -74,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,8 +221,13 @@
     "    else:\n",
     "        raise RuntimeError(\"OrbitPy only supports J2 and SGP4 propagators.\")\n",
     "            \n",
-    "    start_date_dict = {\"@type\": \"GREGORIAN_UT1\", \"year\": request.start.year, \"month\": request.start.month, \"day\": request.start.day, \"hour\": request.start.hour, \"minute\": request.start.minute, \"second\": request.start.second + request.start.microsecond / 1000000.0}\n",
-    "    start_date = OrbitPy_OrbitState.date_from_dict(start_date_dict) # assumed that the time scale is UT1\n",
+    "    #### Convert request time to Julian Date UT1####\n",
+    "    utc_dt = request.start.astimezone(timezone.utc) # Convert to UTC (if not already in UTC)\n",
+    "    astropy_utc_time = AstroPy_Time(utc_dt, scale='utc') # Convert to astropy Time object  \n",
+    "    astropy_ut1_time = astropy_utc_time.ut1 # Convert to UT1 scale\n",
+    "\n",
+    "    start_date_dict = {\"@type\": \"JULIAN_DATE_UT1\", \"jd\": astropy_ut1_time.jd}\n",
+    "    start_date = OrbitPy_OrbitState.date_from_dict(start_date_dict) # assumed that the time scale is UT1.\n",
     "    duration = request.duration.total_seconds() / 86400.0\n",
     "    \n",
     "    for orbitpy_sat in OrbitPy_Satellites:\n",
@@ -270,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
