apply black formatting

--- a/src/tatc-coverage-example.ipynb
+++ b/src/tatc-coverage-example.ipynb
@@ -21,7 +21,12 @@
     "import geopandas as gpd\n",
     "import pandas as pd\n",
     "\n",
-    "from tatc.schemas import Instrument as TATC_Instrument, Satellite as TATC_Satellite, TwoLineElements, Point\n",
+    "from tatc.schemas import (\n",
+    "    Instrument as TATC_Instrument,\n",
+    "    Satellite as TATC_Satellite,\n",
+    "    TwoLineElements,\n",
+    "    Point,\n",
+    ")\n",
     "from tatc.analysis import (\n",
     "    collect_multi_observations,\n",
     "    aggregate_observations,\n",
@@ -53,11 +58,13 @@
     "            name=satellite.id,\n",
     "            orbit=TwoLineElements(tle=satellite.orbit.to_tle()),\n",
     "            instruments=[\n",
-    "                TATC_Instrument(name=str(payload.id), field_of_regard=payload.field_of_view)\n",
+    "                TATC_Instrument(\n",
+    "                    name=str(payload.id), field_of_regard=payload.field_of_view\n",
+    "                )\n",
     "            ],\n",
     "        )\n",
     "        for satellite in request.satellites\n",
-    "        for payload in satellite.payloads \n",
+    "        for payload in satellite.payloads\n",
     "        if payload.id in request.payload_ids\n",
     "    ]\n",
     "    observations = Parallel(-1)(\n",
@@ -84,7 +91,10 @@
     "                    target_id=target.id,\n",
     "                    samples=observations[i].apply(\n",
     "                        lambda s: AccessSample(\n",
-    "                            start=s.start, duration=s.end - s.start, satellite_id=s.satellite, instrument_id=s.instrument\n",
+    "                            start=s.start,\n",
+    "                            duration=s.end - s.start,\n",
+    "                            satellite_id=s.satellite,\n",
+    "                            instrument_id=s.instrument,\n",
     "                        ),\n",
     "                        axis=1,\n",
     "                    ),\n",
@@ -393,9 +403,7 @@
     "        Satellite(\n",
     "            id=\"ISS\",\n",
     "            orbit=GeneralPerturbationsOrbitState.from_omm(iss_omm),\n",
-    "            payloads=[\n",
-    "                Payload(id=\"Test\", field_of_view=100)\n",
-    "            ]\n",
+    "            payloads=[Payload(id=\"Test\", field_of_view=100)],\n",
     "        )\n",
     "    ],\n",
     "    targets=UniformAngularGrid(\n",
@@ -404,7 +412,7 @@
     "    start=datetime(2024, 1, 1, tzinfo=timezone.utc),\n",
     "    duration=timedelta(days=7),\n",
     "    propagator=Propagator.SGP4,\n",
-    "    payload_ids=[\"Test\"]\n",
+    "    payload_ids=[\"Test\"],\n",
     ")\n",
     "\n",
     "display(request.model_dump_json())\n",
