--- a/src/tatc-propagation-example.ipynb
+++ b/src/tatc-propagation-example.ipynb
@@ -17,7 +17,11 @@
    "source": [
     "from joblib import Parallel, delayed\n",
     "\n",
-    "from tatc.schemas import Instrument as TATC_Instrument, Satellite as TATC_Satellite, TwoLineElements\n",
+    "from tatc.schemas import (\n",
+    "    Instrument as TATC_Instrument,\n",
+    "    Satellite as TATC_Satellite,\n",
+    "    TwoLineElements,\n",
+    ")\n",
     "from tatc.analysis import collect_orbit_track, OrbitCoordinate, OrbitOutput\n",
     "\n",
     "from eose.propagation import (\n",
@@ -275,16 +279,14 @@
     "        Satellite(\n",
     "            id=\"ISS\",\n",
     "            orbit=GeneralPerturbationsOrbitState.from_omm(iss_omm),\n",
-    "            instruments=[\n",
-    "                Payload(id=\"Test\", field_of_view=100)\n",
-    "            ]\n",
+    "            instruments=[Payload(id=\"Test\", field_of_view=100)],\n",
     "        )\n",
     "    ],\n",
     "    start=datetime(2024, 1, 1, tzinfo=timezone.utc),\n",
     "    duration=timedelta(hours=1),\n",
     "    time_step=timedelta(minutes=1),\n",
     "    frame=CartesianReferenceFrame.ICRF,\n",
-    "    propagator=Propagator.SGP4\n",
+    "    propagator=Propagator.SGP4,\n",
     ")\n",
     "\n",
     "display(request.model_dump_json())\n",
