--- a/src/orbitpy-propagation-example.ipynb
+++ b/src/orbitpy-propagation-example.ipynb
@@ -27,12 +27,22 @@
     "\n",
     "import pandas as pd\n",
     "\n",
-    "from orbitpy.util import OrbitState as OrbitPy_OrbitState, Spacecraft as OrbitPy_Spacecraft\n",
-    "from orbitpy.propagator import J2AnalyticalPropagator as OrbitPy_J2AnalyticalPropagator, SGP4Propagator as OrbitPy_SGP4Propagator\n",
+    "from orbitpy.util import (\n",
+    "    OrbitState as OrbitPy_OrbitState,\n",
+    "    Spacecraft as OrbitPy_Spacecraft,\n",
+    ")\n",
+    "from orbitpy.propagator import (\n",
+    "    J2AnalyticalPropagator as OrbitPy_J2AnalyticalPropagator,\n",
+    "    SGP4Propagator as OrbitPy_SGP4Propagator,\n",
+    ")\n",
     "\n",
     "from eose.orbits import GeneralPerturbationsOrbitState, Propagator\n",
     "from eose.satellites import Satellite\n",
-    "from eose.utils import CartesianReferenceFrame, PlanetaryCoordinateReferenceSystem, Quaternion\n",
+    "from eose.utils import (\n",
+    "    CartesianReferenceFrame,\n",
+    "    PlanetaryCoordinateReferenceSystem,\n",
+    "    Quaternion,\n",
+    ")\n",
     "from eose.geometry import Position\n",
     "\n",
     "from eose.propagation import (\n",
@@ -42,7 +52,7 @@
     "    PropagationResponse,\n",
     ")\n",
     "\n",
-    "#pd.set_option('display.max_rows', None)"
+    "# pd.set_option('display.max_rows', None)"
    ]
   },
   {
@@ -62,12 +72,9 @@
     "iss_omm_str = '[{\"OBJECT_NAME\":\"ISS (ZARYA)\",\"OBJECT_ID\":\"1998-067A\",\"EPOCH\":\"2024-06-07T09:53:34.728000\",\"MEAN_MOTION\":15.50975122,\"ECCENTRICITY\":0.0005669,\"INCLINATION\":51.6419,\"RA_OF_ASC_NODE\":3.7199,\"ARG_OF_PERICENTER\":284.672,\"MEAN_ANOMALY\":139.0837,\"EPHEMERIS_TYPE\":0,\"CLASSIFICATION_TYPE\":\"U\",\"NORAD_CAT_ID\":25544,\"ELEMENT_SET_NO\":999,\"REV_AT_EPOCH\":45703,\"BSTAR\":0.00033759,\"MEAN_MOTION_DOT\":0.00019541,\"MEAN_MOTION_DDOT\":0}]'\n",
     "iss_omm = json.loads(iss_omm_str)[0]\n",
     "\n",
-    "satellites=[\n",
-    "        Satellite(\n",
-    "            id=\"ISS\",\n",
-    "            orbit=GeneralPerturbationsOrbitState.from_omm(iss_omm)\n",
-    "        )\n",
-    "    ]\n",
+    "satellites = [\n",
+    "    Satellite(id=\"ISS\", orbit=GeneralPerturbationsOrbitState.from_omm(iss_omm))\n",
+    "]\n",
     "\n",
     "mission_start = datetime(2024, 1, 1, tzinfo=timezone.utc)\n",
     "mission_duration = timedelta(days=1)\n",
@@ -97,48 +104,63 @@
     "    os.makedirs(temp_dir, exist_ok=True)\n",
     "\n",
     "    if request.frame != CartesianReferenceFrame.ICRF:\n",
-    "        raise ValueError(f\"OrbitPy supports only CartesianReferenceFrame.ICRF and does not support {request.frame}\")\n",
-    "    \n",
+    "        raise ValueError(\n",
+    "            f\"OrbitPy supports only CartesianReferenceFrame.ICRF and does not support {request.frame}\"\n",
+    "        )\n",
+    "\n",
     "    #### Enumerate and convert from EOSE-API satellites to OrbitPy satellite objects. ####\n",
     "    OrbitPy_Satellites = []\n",
     "    for satellite in request.satellites:\n",
-    "                \n",
+    "\n",
     "        tle = satellite.orbit.to_tle()\n",
-    "        orbit_state = OrbitPy_OrbitState.from_dict({\"tle\": {\n",
-    "                                                    \"tle_line0\": \"Unknown\",\n",
-    "                                                    \"tle_line1\": tle[0],\n",
-    "                                                    \"tle_line2\": tle[1]\n",
-    "                                                    }})\n",
-    "        \n",
-    "        sat = OrbitPy_Spacecraft(_id = satellite.id,\n",
-    "                                 orbitState = orbit_state  #satellite-bus and instrument attributes are ignored since they are not relevant to propagation\n",
-    "                                )\n",
+    "        orbit_state = OrbitPy_OrbitState.from_dict(\n",
+    "            {\"tle\": {\"tle_line0\": \"Unknown\", \"tle_line1\": tle[0], \"tle_line2\": tle[1]}}\n",
+    "        )\n",
+    "\n",
+    "        sat = OrbitPy_Spacecraft(\n",
+    "            _id=satellite.id,\n",
+    "            orbitState=orbit_state,  # satellite-bus and instrument attributes are ignored since they are not relevant to propagation\n",
+    "        )\n",
     "        OrbitPy_Satellites.append(sat)\n",
-    "    \n",
+    "\n",
     "    #### run propagation and coverage with OrbitPy ####\n",
     "    step_size_s = request.time_step.total_seconds()\n",
     "    if request.propagator != Propagator.J2:\n",
-    "        propagator = OrbitPy_J2AnalyticalPropagator.from_dict({\"@type\": \"J2 ANALYTICAL PROPAGATOR\", \"stepSize\": step_size_s})\n",
+    "        propagator = OrbitPy_J2AnalyticalPropagator.from_dict(\n",
+    "            {\"@type\": \"J2 ANALYTICAL PROPAGATOR\", \"stepSize\": step_size_s}\n",
+    "        )\n",
     "    elif request.propagator != Propagator.SGP4:\n",
-    "        propagator = OrbitPy_SGP4Propagator.from_dict({\"@type\": \"SGP4 PROPAGATOR\", \"stepSize\": step_size_s})\n",
+    "        propagator = OrbitPy_SGP4Propagator.from_dict(\n",
+    "            {\"@type\": \"SGP4 PROPAGATOR\", \"stepSize\": step_size_s}\n",
+    "        )\n",
     "    else:\n",
     "        raise RuntimeError(\"OrbitPy only supports J2 and SGP4 propagators.\")\n",
-    "            \n",
+    "\n",
     "    #### Convert request time to Julian Date UT1####\n",
-    "    utc_dt = request.start.astimezone(timezone.utc) # Convert to UTC (if not already in UTC)\n",
-    "    astropy_utc_time = AstroPy_Time(utc_dt, scale='utc') # Convert to astropy Time object  \n",
-    "    astropy_ut1_time = astropy_utc_time.ut1 # Convert to UT1 scale\n",
+    "    utc_dt = request.start.astimezone(\n",
+    "        timezone.utc\n",
+    "    )  # Convert to UTC (if not already in UTC)\n",
+    "    astropy_utc_time = AstroPy_Time(\n",
+    "        utc_dt, scale=\"utc\"\n",
+    "    )  # Convert to astropy Time object\n",
+    "    astropy_ut1_time = astropy_utc_time.ut1  # Convert to UT1 scale\n",
     "\n",
     "    start_date_dict = {\"@type\": \"JULIAN_DATE_UT1\", \"jd\": astropy_ut1_time.jd}\n",
-    "    start_date = OrbitPy_OrbitState.date_from_dict(start_date_dict) # assumed that the time scale is UT1.\n",
+    "    start_date = OrbitPy_OrbitState.date_from_dict(\n",
+    "        start_date_dict\n",
+    "    )  # assumed that the time scale is UT1.\n",
     "    duration = request.duration.total_seconds() / 86400.0\n",
-    "    \n",
+    "\n",
     "    satellite_records = []\n",
     "    for orbitpy_sat in OrbitPy_Satellites:\n",
     "\n",
     "        # run propagation with OrbitPy\n",
-    "        with tempfile.NamedTemporaryFile(mode='w+t', delete=False,dir=temp_dir) as state_cart_file: # store satellite states in a temporary file.\n",
-    "            propagator.execute(orbitpy_sat, start_date, state_cart_file.name, None, duration)\n",
+    "        with tempfile.NamedTemporaryFile(\n",
+    "            mode=\"w+t\", delete=False, dir=temp_dir\n",
+    "        ) as state_cart_file:  # store satellite states in a temporary file.\n",
+    "            propagator.execute(\n",
+    "                orbitpy_sat, start_date, state_cart_file.name, None, duration\n",
+    "            )\n",
     "\n",
     "        # transform the OrbitPy propagation results to PropagationResponse object\n",
     "        orbitpy_states_df = pd.read_csv(state_cart_file.name, skiprows=4)\n",
@@ -146,25 +168,34 @@
     "        # iterate over the dataframe and form PropagationSamples\n",
     "        propagation_samples = []\n",
     "        for index, row in orbitpy_states_df.iterrows():\n",
-    "            propagation_samples.append(PropagationSample(\n",
-    "                                                time = request.start + timedelta(seconds=step_size_s*row[\"time index\"]),\n",
-    "                                                position = [row[\"x [km]\"]*1e3, row[\"y [km]\"]*1e3, row[\"z [km]\"]*1e3],\n",
-    "                                                velocity = [row[\"vx [km/s]\"]*1e3, row[\"vy [km/s]\"]*1e3, row[\"vz [km/s]\"]*1e3]\n",
-    "                                    ))\n",
-    "                                        \n",
-    "        satellite_records.append(PropagationRecord(\n",
-    "                                    satellite_id = orbitpy_sat._id,\n",
-    "                                    samples = propagation_samples\n",
-    "                                ))\n",
+    "            propagation_samples.append(\n",
+    "                PropagationSample(\n",
+    "                    time=request.start\n",
+    "                    + timedelta(seconds=step_size_s * row[\"time index\"]),\n",
+    "                    position=[\n",
+    "                        row[\"x [km]\"] * 1e3,\n",
+    "                        row[\"y [km]\"] * 1e3,\n",
+    "                        row[\"z [km]\"] * 1e3,\n",
+    "                    ],\n",
+    "                    velocity=[\n",
+    "                        row[\"vx [km/s]\"] * 1e3,\n",
+    "                        row[\"vy [km/s]\"] * 1e3,\n",
+    "                        row[\"vz [km/s]\"] * 1e3,\n",
+    "                    ],\n",
+    "                )\n",
+    "            )\n",
     "\n",
-    "    \n",
+    "        satellite_records.append(\n",
+    "            PropagationRecord(satellite_id=orbitpy_sat._id, samples=propagation_samples)\n",
+    "        )\n",
+    "\n",
     "    # delete the temporary directory\n",
     "    shutil.rmtree(temp_dir)\n",
-    "    \n",
+    "\n",
     "    return PropagationResponse(\n",
-    "            **request.model_dump(exclude=\"satellite_records\"),\n",
-    "            satellite_records=satellite_records\n",
-    "        )"
+    "        **request.model_dump(exclude=\"satellite_records\"),\n",
+    "        satellite_records=satellite_records,\n",
+    "    )"
    ]
   },
   {
@@ -179,14 +210,14 @@
     "    duration=mission_duration,\n",
     "    frame=CartesianReferenceFrame.ICRF,\n",
     "    propagator=Propagator.J2,\n",
-    "    time_step=propagate_time_step\n",
+    "    time_step=propagate_time_step,\n",
     ")\n",
     "\n",
-    "#display(request.model_dump_json())\n",
+    "# display(request.model_dump_json())\n",
     "\n",
     "propagate_response = propagate_orbitpy(request)\n",
     "\n",
-    "#display(propagate_response.model_dump_json())\n",
+    "# display(propagate_response.model_dump_json())\n",
     "\n",
     "propagate_data = propagate_response.as_dataframe()\n",
     "\n",
